// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<Tabs
  colorScheme="dark"
  linkComponent={[Function]}
  onChange={[Function]}
  selected={0}
  tabs={
    Array [
      Object {
        "icon": <svg
          viewBox="0 0 24 24"
    >
          <path
                d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
          />
    </svg>,
        "text": "Test 1",
      },
      Object {
        "icon": <svg
          viewBox="0 0 24 24"
    >
          <path
                d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
          />
    </svg>,
        "text": "Test 2",
      },
    ]
  }
>
  <TabsWrapperStyled
    colorScheme="dark"
  >
    <div
      className="TabsWrapperStyled-dqdZaj irKElO"
    >
      <TabsContentWrapperStyled>
        <div
          className="TabsContentWrapperStyled-gZFwCM bqxSvP"
        >
          <TabsListStyled>
            <div
              className="TabsListStyled-hCaYrA dBLEcs"
            >
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                    />
                  </svg>
                }
                index={0}
                isSelected={true}
                key="0"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 1"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={true}
                >
                  <div
                    className="TabStyled-kyRlfB vASeN"
                    onClick={[Function]}
                    selected={true}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-gkOJpN bJEhdI"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-ksDzLH ieZSTT"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={true}
                            >
                              <div
                                className="TabIconStyled-clnPsW jfCxxK"
                                selected={true}
                              >
                                <svg
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                                  />
                                </svg>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon={true}
                            >
                              <div
                                className="TabTextStyled-hKBktu hyUoMC"
                              >
                                Test 1
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                    />
                  </svg>
                }
                index={1}
                isSelected={false}
                key="1"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 2"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={false}
                >
                  <div
                    className="TabStyled-kyRlfB bgEHWe"
                    onClick={[Function]}
                    selected={false}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-gkOJpN bJEhdI"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-ksDzLH ieZSTT"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={false}
                            >
                              <div
                                className="TabIconStyled-clnPsW faBOEm"
                                selected={false}
                              >
                                <svg
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                                  />
                                </svg>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon={true}
                            >
                              <div
                                className="TabTextStyled-hKBktu hyUoMC"
                              >
                                Test 2
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
            </div>
          </TabsListStyled>
        </div>
      </TabsContentWrapperStyled>
    </div>
  </TabsWrapperStyled>
</Tabs>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<Tabs
  colorScheme="dark"
  linkComponent={[Function]}
  onChange={[Function]}
  selected={0}
  tabs={
    Array [
      Object {
        "icon": <svg
          viewBox="0 0 24 24"
    >
          <path
                d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
          />
    </svg>,
        "text": "Test 1",
      },
      Object {
        "icon": <svg
          viewBox="0 0 24 24"
    >
          <path
                d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
          />
    </svg>,
        "text": "Test 2",
      },
    ]
  }
>
  <TabsWrapperStyled
    colorScheme="dark"
  >
    <div
      className="TabsWrapperStyled-dqdZaj irKElO"
    >
      <TabsContentWrapperStyled>
        <div
          className="TabsContentWrapperStyled-gZFwCM bqxSvP"
        >
          <TabsListStyled>
            <div
              className="TabsListStyled-hCaYrA dBLEcs"
            >
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                    />
                  </svg>
                }
                index={0}
                isSelected={false}
                key="0"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 1"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={false}
                >
                  <div
                    className="TabStyled-kyRlfB bgEHWe"
                    onClick={[Function]}
                    selected={false}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-gkOJpN bJEhdI"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-ksDzLH ieZSTT"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={false}
                            >
                              <div
                                className="TabIconStyled-clnPsW faBOEm"
                                selected={false}
                              >
                                <svg
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                                  />
                                </svg>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon={true}
                            >
                              <div
                                className="TabTextStyled-hKBktu hyUoMC"
                              >
                                Test 1
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
              <Tab
                colorScheme="dark"
                disabled={false}
                icon={
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                    />
                  </svg>
                }
                index={1}
                isSelected={true}
                key="1"
                linkComponent={[Function]}
                linkHref=""
                onSelect={[Function]}
                text="Test 2"
              >
                <TabStyled
                  colorScheme="dark"
                  onClick={[Function]}
                  selected={true}
                >
                  <div
                    className="TabStyled-kyRlfB vASeN"
                    onClick={[Function]}
                    selected={true}
                  >
                    <TabContentWrapperStyled>
                      <div
                        className="TabContentWrapperStyled-gkOJpN bJEhdI"
                      >
                        <TabContentStyled>
                          <div
                            className="TabContentStyled-ksDzLH ieZSTT"
                          >
                            <TabIconStyled
                              colorScheme="dark"
                              selected={true}
                            >
                              <div
                                className="TabIconStyled-clnPsW jfCxxK"
                                selected={true}
                              >
                                <svg
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                                  />
                                </svg>
                              </div>
                            </TabIconStyled>
                            <TabTextStyled
                              hasIcon={true}
                            >
                              <div
                                className="TabTextStyled-hKBktu hyUoMC"
                              >
                                Test 2
                              </div>
                            </TabTextStyled>
                          </div>
                        </TabContentStyled>
                      </div>
                    </TabContentWrapperStyled>
                  </div>
                </TabStyled>
              </Tab>
            </div>
          </TabsListStyled>
        </div>
      </TabsContentWrapperStyled>
    </div>
  </TabsWrapperStyled>
</Tabs>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled-kyRlfB vASeN"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-gkOJpN bJEhdI"
          >
            <div
              className="TabContentStyled-ksDzLH ieZSTT"
            >
              <div
                className="TabTextStyled-hKBktu dIRLXI"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled-kyRlfB bgEHWe"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled-gkOJpN bJEhdI"
          >
            <div
              className="TabContentStyled-ksDzLH ieZSTT"
            >
              <div
                className="TabTextStyled-hKBktu dIRLXI"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <div
        className="TabStyled-kyRlfB vASeN"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabIconStyled-clnPsW jfCxxK"
              selected={true}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled-hKBktu hyUoMC"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled-kyRlfB vASeN"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-gkOJpN bJEhdI"
          >
            <div
              className="TabContentStyled-ksDzLH ieZSTT"
            >
              <div
                className="TabTextStyled-hKBktu dIRLXI"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB vASeN"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB vASeN"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB vASeN"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-kyRlfB bgEHWe"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          >
            <div
              className="TabTextStyled-hKBktu dIRLXI"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    >
      <div
        className="TabStyled-kyRlfB vASeN"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-gkOJpN bJEhdI"
        >
          <div
            className="TabContentStyled-ksDzLH ieZSTT"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled-dqdZaj irKElO"
>
  <div
    className="TabsContentWrapperStyled-gZFwCM bqxSvP"
  >
    <div
      className="TabsListStyled-hCaYrA dBLEcs"
    />
  </div>
</div>
`;
